Use usernames for workspace access API
